[project]
name = "ssh-agent-add-id"
description = """A wrapper for ssh-add that checks whether a key has already been added \
to the SSH agent rather than prompting for the passphrase every time."""
dynamic = ["version"]
authors = [{name = "Alexis Bergue"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "pexpect ~= 4.9",
    "pydantic ~= 2.6",
]
optional-dependencies.dev = [
    "coverage ~= 7.4",
    "pytest ~= 7.4",
    "pytest-mock ~= 3.11",
    "ruff ~= 0.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Topic :: System :: Networking",
]
keywords = [
  "ssh", "ssh-add", "ssh-agent", "authentication", "key", "identity",
  "vscode", "vs code", "visual studio code", "wsl", "wsl2",
  "git", "github", "gitlab", "bitbucket"
]

[project.scripts]
ssh-agent-add-id = "ssh_agent_add_id.cli:main"

[project.urls]
Homepage = "https://github.com/alexisbg/ssh-agent-add-id"
Issues = "https://github.com/alexisbg/ssh-agent-add-id/issues"
Repository = "https://github.com/alexisbg/ssh-agent-add-id"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/ssh_agent_add_id/__init__.py" }

[tool.pdm.scripts]
pre_coverage.composite = ["test_unit"]
coverage.shell = "coverage report && coverage lcov"
diff.composite = ["ruff_check", "ruff_format"]
lint.shell = "pyright; ruff check --ignore FIX002 ; ruff format --check"
ruff_check = "ruff check --diff --ignore FIX002"
ruff_format = "ruff format --diff"
test.composite = ["test_unit", "test_functional"]
test_functional = "pytest tests/functional"
test_unit = "coverage run -m pytest tests/unit"

[tool.coverage.run]
data_file = ".coverage/.coverage"
omit = [
  "*/tests/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.lcov]
output = ".coverage/lcov.info"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.8"
typeCheckingMode = "basic"

[tool.ruff]
extend-exclude = ["*.stop"]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "FIX", "I", "W"]
ignore = [
  "ANN002", # missing-type-args (for *args)
  "ANN003", # missing-type-kwargs
  "ANN101", # missing-type-self
  "ANN102", # missing-type-cls
  "D100", # undocumented-public-module
  "D104", # undocumented-public-package
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
  "D205", # blank-line-after-summary
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
